# ai-manim

./: .gitignore  CLAUDE.md  analyze_traces.py  main.py  pyproject.toml  telemetry_config.py  test_telemetry.py  todo.md  visualization.py
telemetry/: analyze_traces.ipynb  config.py  test_traces.jsonl
tests/: test_telemetry_integration.py
