[project]
name = "ai-manim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=2.6.27",
    "jupyter>=1.1.1",
    "manim>=0.19.0",
    "pillow>=11.3.0",
    "arize-phoenix[evals]>=5.0.0",
    "openinference-instrumentation-dspy>=0.1.27",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "duckdb>=1.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
